--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -2,6 +2,6 @@
 	background-image: url(file:///henryngoy/School%20Files/Spring%20Quarter%202013/BIT%20271/Fighter%27s%20Guide%20App/Images/icon_video.png);
 }
 
-#mk2characters > img {
+#mk2characters img {
 	text-align:center;
 }
